backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: estate-agent
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estate-agent
      tier: backend
  template:
    metadata:
      labels:
        app: estate-agent
        tier: backend
    spec:
      containers:
        - name: backend
          image: nourajaz/backend-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
