estate-agent-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estate-agent-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estate-agent-backend
  template:
    metadata:
      labels:
        app: estate-agent-backend
    spec:
      containers:
      - name: estate-agent-backend
        image: 514011952473.dkr.ecr.eu-central-1.amazonaws.com/estate-agent-backend:latest
        ports:
        - containerPort: 3000
