estate-agent-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estate-agent-frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: estate-agent-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: estate-agent-frontend
    spec:
      containers:
        - name: estate-agent-frontend
          image: final-project-blog/estate-agent-frontend:latest  # Beispiel-Image-Namen und Tag
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
